--- a/PCATool/app/src/main/res/layout/activity_adulto_b.xml
+++ b/PCATool/app/src/main/res/layout/activity_adulto_b.xml
@@ -17,63 +17,260 @@
 
 
         <TextView
-            android:text="@string/tituloB"
+            android:id="@+id/txtTituloFormularioBA"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textStyle="bold"
             android:layout_marginBottom="20dp"
-            android:id="@+id/textView9" />
+            android:text="@string/tituloB"
+            android:textAlignment="center"
+            android:textStyle="bold" />
 
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:shrinkColumns="0">
 
-            <TableRow>
-                <TextView android:text="@string/opcao" android:padding="1dp" android:layout_weight="1"/>
-                <TextView android:text="@string/CertazaSim" android:textAlignment="center" android:padding="2dp" android:textStyle="bold" android:layout_weight="0.25"/>
-                <TextView android:text="@string/ProvavelSim" android:textAlignment="center" android:padding="2dp" android:textStyle="bold" android:layout_weight="0.25"/>
-                <TextView android:text="@string/ProvavelNao" android:textAlignment="center" android:padding="2dp" android:textStyle="bold" android:layout_weight="0.25"/>
-                <TextView android:text="@string/CertazaNao" android:textAlignment="center" android:padding="2dp" android:textStyle="bold" android:layout_weight="0.25"/>
-                <TextView android:text="@string/NaoSei" android:textAlignment="center" android:padding="2dp" android:textStyle="bold" android:layout_weight="0.25"/>
+            <TableRow
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/opcao" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView16"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="@string/CertazaSim"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView17"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="@string/ProvavelSim"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView18"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="@string/ProvavelNao"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView15"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="@string/CertazaNao"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView14"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="@string/NaoSei"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
             </TableRow>
 
-            <TableRow>
-                <TextView android:text="@string/B1" android:padding="3dp" android:layout_weight="0.4"/>
-                <RadioGroup android:id="@+id/gb1" android:layout_height="match_parent" android:layout_width="wrap_content" android:layout_weight="1" android:orientation="horizontal" android:layout_marginLeft="5dp">
-                    <RadioButton android:text="@string/P4" android:id="@+id/b14" android:layout_height="match_parent" android:layout_width="match_parent" android:layout_weight="0.25"/>
-                    <RadioButton android:text="@string/P3" android:id="@+id/b13" android:layout_height="match_parent" android:layout_width="match_parent" android:layout_weight="0.25"/>
-                    <RadioButton android:text="@string/P2" android:id="@+id/b12" android:layout_height="match_parent" android:layout_width="match_parent" android:layout_weight="0.25"/>
-                    <RadioButton android:text="@string/P1" android:id="@+id/b11" android:layout_height="match_parent" android:layout_width="match_parent" android:layout_weight="0.25"/>
-                    <RadioButton android:text="@string/P9" android:id="@+id/b19" android:layout_height="match_parent" android:layout_width="match_parent" android:layout_weight="0.25"/>
+            <TableRow
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                    android:id="@+id/txtQuestaoB1A"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/B1" />
+
+                <RadioGroup
+                    android:id="@+id/rdgRespB1A"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/rdoB14A"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="@string/P4" />
+
+                    <RadioButton
+                        android:id="@+id/rdoB13A"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="@string/P3" />
+
+                    <RadioButton
+                        android:id="@+id/rdoB12A"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="@string/P2" />
+
+                    <RadioButton
+                        android:id="@+id/rdoB11A"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="@string/P1" />
+
+                    <RadioButton
+                        android:id="@+id/rdoB19A"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="@string/P9" />
                 </RadioGroup>
-                </TableRow>
-            <TableRow>
-                <TextView android:text="@string/B2" android:padding="3dp"/>
-                <RadioButton android:text="@string/P4" android:layout_gravity="center_horizontal|center_vertical" android:padding="5dp"/>
-                <RadioButton android:text="@string/P3" android:layout_gravity="center_horizontal|center_vertical" android:padding="5dp"/>
-                <RadioButton android:text="@string/P2" android:layout_gravity="center_horizontal|center_vertical" android:padding="5dp"/>
-                <RadioButton android:text="@string/P1" android:layout_gravity="center_horizontal|center_vertical" android:padding="5dp"/>
-                <RadioButton android:text="@string/P9" android:layout_gravity="center_horizontal|center_vertical" android:padding="5dp"/>
             </TableRow>
-            <TableRow>
-                <TextView android:text="@string/B3" android:padding="3dp"/>
-                <RadioButton android:text="@string/P4" android:layout_gravity="center_horizontal|center_vertical" android:padding="5dp"/>
-                <RadioButton android:text="@string/P3" android:layout_gravity="center_horizontal|center_vertical" android:padding="5dp"/>
-                <RadioButton android:text="@string/P2" android:layout_gravity="center_horizontal|center_vertical" android:padding="5dp"/>
-                <RadioButton android:text="@string/P1" android:layout_gravity="center_horizontal|center_vertical" android:padding="5dp"/>
-                <RadioButton android:text="@string/P9" android:layout_gravity="center_horizontal|center_vertical" android:padding="5dp"/>
+
+            <TableRow
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                    android:id="@+id/txtQuestaoB2A"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/B2" />
+
+                <RadioGroup
+                    android:id="@+id/rdgRespB2A"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/rdoB24A"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="@string/P4" />
+
+                    <RadioButton
+                        android:id="@+id/rdoB23A"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="@string/P3" />
+
+                    <RadioButton
+                        android:id="@+id/rdoB22A"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="@string/P2" />
+
+                    <RadioButton
+                        android:id="@+id/rdoB21A"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="@string/P1" />
+
+                    <RadioButton
+                        android:id="@+id/rdoB29A"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="@string/P9" />
+
+                </RadioGroup>
+
+            </TableRow>
+
+            <TableRow
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                    android:id="@+id/txtQuestaoB3A"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/B3" />
+
+                <RadioGroup
+                    android:id="@+id/rdgRespB3A"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/rdoB34A"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_horizontal|center_vertical"
+                        android:layout_weight="1"
+                        android:text="@string/P4" />
+
+                    <RadioButton
+                        android:id="@+id/rdoB33A"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_horizontal|center_vertical"
+                        android:layout_weight="1"
+                        android:text="@string/P3" />
+
+                    <RadioButton
+                        android:id="@+id/rdoB32A"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_horizontal|center_vertical"
+                        android:layout_weight="1"
+                        android:text="@string/P2" />
+
+                    <RadioButton
+                        android:id="@+id/rdoB31A"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_horizontal|center_vertical"
+                        android:layout_weight="1"
+                        android:text="@string/P1" />
+
+                    <RadioButton
+                        android:id="@+id/rdoB39A"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_horizontal|center_vertical"
+                        android:layout_weight="1"
+                        android:text="@string/P9" />
+                </RadioGroup>
+
             </TableRow>
         </TableLayout>
 
 
         <Button
-            android:text="@string/Prosseguir"
+            android:id="@+id/btnProximo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:id="@+id/proximo" />
+            android:text="@string/Prosseguir" />
     </LinearLayout>
 
 </ScrollView>
